[package]
name = "you_should_not_pass"
version = "0.1.0"
edition = "2021"

[dependencies]

# database
diesel = { version = "2.2.1", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenv = "0.15.0"

#async
tokio = { version = "1", features = ["full"] }

# TLS
tokio-rustls = "0.26.0"

#HTTP
reqwest = { version = "0.12", features = ["json"] }

#os-diff
# windows = {}
pam = { version = "0.7.0"}
whoami = { version = "1.5.1" }

# de/encryption
aes-gcm = "0.10.3"
base64 = "0.22.1"

[[bin]]
name = "generate_key"
path = "src/bin/generate_key.rs"

[[bin]]
name = "add_test_data"
path = "src/bin/add_test_data.rs"
